objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Address_Sequence_Number__c</fullName>
        <description>Account address sequence number for making callouts to BlueSTAR.</description>
        <label>Account Address Sequence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Survey__c</fullName>
        <description>This field is used to capture if an account survey is sent to the Group contact and the frequency of the survey.</description>
        <label>Account Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the account associated to the contact.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_user__c</fullName>
        <description>This field is used to capture if the contact is also an active user in the system.</description>
        <formula>Associated_User__r.IsActive</formula>
        <label>Active user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_to_Buyer_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the Group Contact should be added to the buyer hierarchy of the associated account.</description>
        <label>Add to Buyer Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>This field is used to capture any additional information about the contact.</description>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_ID__c</fullName>
        <label>Agency ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_User_Active__c</fullName>
        <formula>Associated_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated User Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the user name if an Internal Contact is also a system user.</description>
        <inlineHelpText>Internal Contacts to User mapping</inlineHelpText>
        <label>Associated User</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Role__c</fullName>
        <description>This field is used to capture the role the Group Contact plays in the buying process for the associated account.</description>
        <inlineHelpText>The role a contact plays in the buying process</inlineHelpText>
        <label>Buyer Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Influencer</fullName>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Other Influencer</fullName>
                </value>
                <value>
                    <fullName>Financial Influencer</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Childrens_Names__c</fullName>
        <description>This field is used to capture the names of the contact&apos;s children.</description>
        <label>Children&apos;s Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Public_Affairs_Relationship__c</fullName>
        <description>This field is used to capture data specific to a contact about strategic community and/or public affairs relationships.</description>
        <label>Community/ Public Affairs Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Method_Preference__c</fullName>
        <description>This field is used to capture the contact&apos;s preferred methods of communication.</description>
        <label>Contact Method Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the contact is a contractor or full-time employee.</description>
        <label>Contractor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity_Code__c</fullName>
        <formula>TEXT( Account.BillingStateCode )+ &quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Entity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Gift_Entertainment_Policy__c</fullName>
        <description>This field is used to capture details about the contact&apos;s company gift or entertainment policy.</description>
        <label>Corporate Gift/ Entertainment Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>cost center for internal contact (HCSC employee) used on Ticket</description>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>This field is used to capture the highest educational degree the contact has achieved.</description>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D.O.</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>LPN</fullName>
                </value>
                <value>
                    <fullName>M.D.</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>Master of Public Health</fullName>
                </value>
                <value>
                    <fullName>Master of Science</fullName>
                </value>
                <value>
                    <fullName>PHD</fullName>
                </value>
                <value>
                    <fullName>R.T.</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>Reg. Pharmacist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <description>This field is used to capture the department ID of the HCSC Employee sourced from Peoplesoft.</description>
        <label>Department ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dislikes__c</fullName>
        <description>This field is used to capture details about the contact&apos;s dislikes.</description>
        <label>Dislikes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used to capture the unique identifier number of the contact in the source system (e.g., BlueStar, Siebel SFA)</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Identifier Number of the Contact in the Source System</inlineHelpText>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HCSC_Events_Attended__c</fullName>
        <description>This field is used to capture any HCSC events the contact has attended (eg concert, sporting event, etc.).</description>
        <label>HCSC Events Attended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCSC_Sentiment_Notes__c</fullName>
        <description>This field is used to capture details about the contact&apos;s attitude towards HCSC</description>
        <label>HCSC Sentiment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HCSC_Sentiment__c</fullName>
        <description>This field is used to capture the contact&apos;s attitude toward HCSC.</description>
        <label>HCSC Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Producer, Consultant, or Internal contact is inactive or deleted in source systems.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>This field is used to capture the date of termination of employee from PeopleSoft.</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Action__c</fullName>
        <label>Integration Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>This field is used to capture the Status of integration for Contact Information updates with BlueSTAR</description>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interests_Hobbies__c</fullName>
        <description>This field is used to capture details about the contact&apos;s interests and hobbies.</description>
        <label>Interests/Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAN_ID__c</fullName>
        <description>This field is used to capture the LAN ID of the HCSC employee/contractor.</description>
        <label>LAN ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Communication__c</fullName>
        <description>This field is used to capture the type of mailings that should be sent to a group contact.</description>
        <label>Mail Communication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Privacy Mailing</fullName>
                </value>
                <value>
                    <fullName>Wellness Mailing</fullName>
                </value>
                <value>
                    <fullName>Holiday Card</fullName>
                </value>
                <value>
                    <fullName>Holiday Gift</fullName>
                </value>
                <value>
                    <fullName>Prime Newsletter</fullName>
                </value>
                <value>
                    <fullName>HMO Medical Group Mailings</fullName>
                </value>
                <value>
                    <fullName>Employer Pulse Survey</fullName>
                </value>
                <value>
                    <fullName>Account Management Survey</fullName>
                </value>
                <value>
                    <fullName>BlueVision Newsletter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>This field is used to capture the marital status of the contact.</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Widower</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This field is used to capture the source of data migration.</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_additional_information__c</fullName>
        <description>This field is used to capture additional information about a data migration.</description>
        <label>Migration additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opt_Out_of_News_for_Blues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a group contact has opted out of receiving the BlueVISION newsletter for Employers.</description>
        <label>Opt Out of BlueVISION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_of_News_from_the_Blues_for_Produ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a producer contact has opted out of receiving the News from the Blues for Producers newsletters.</description>
        <label>Opt Out of News from the Blues for Prod.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>Name of the organization for which the contact works.</description>
        <label>Organization Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Survey__c</fullName>
        <description>This field is used to capture if a Performance Guarantee survey should be sent to a group contact and the frequency of the survey.</description>
        <label>PG Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the contact is the primary Producer or Consultant contact for the associated account.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer_Survey__c</fullName>
        <description>This field is used to capture the producer survey sent to the contact.</description>
        <label>Producer Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_s_Name__c</fullName>
        <description>This field is used to capture the name of the contact&apos;s spouse.</description>
        <label>Spouse&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to capture the HR status of the contact from PeopleSoft.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Probation</fullName>
                </value>
                <value>
                    <fullName>Short Term Leave</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Sent__c</fullName>
        <description>This field is used to capture the time the integration request was sent to message broker during account number reservation</description>
        <label>Time Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field is used to capture the type of Group, Producer, or Consultant Contact.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer - GA</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>BAE</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Privacy Officer</fullName>
                </value>
                <value>
                    <fullName>Union</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WM4SF3__WalkMe_Engagement_Score__c</fullName>
        <label>WalkMe Engagement Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Agency_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Agency_Name__c</columns>
        <columns>Agency_ID__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Agency_Contact</value>
        </filters>
        <label>All Agency Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Group_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Group_Contact</value>
        </filters>
        <label>All Group Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Internal_Contacts</fullName>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Internal_Contact</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notContain</operation>
            <value>@tmghealth.com</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Internal Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Producer_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <columns>Primary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Producer_Contact</value>
        </filters>
        <label>All Producer Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Vendor_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Vendor_Contact</value>
        </filters>
        <label>All Vendor Contacts</label>
    </listViews>
    <listViews>
        <fullName>Enrollment_Specialist</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Enrollment_Specialist</value>
        </filters>
        <label>All Enrollment Specialist</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Agency_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about a person who works for an Agency under an Account.</description>
        <label>Agency Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charity_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about a person who works for a Charity organization.</description>
        <label>Charity Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about a person who works for a Competitor Account (carriers other than HCSC)</description>
        <label>Competitor Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consultant_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about a person who works for a Consultant Account</description>
        <label>Consultant Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enrollment_Specialist</fullName>
        <active>true</active>
        <description>Contact record type that captures information about an Enrollment Specialist who does not have a Salesforce.com license</description>
        <label>Enrollment Specialist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about a person who works for a Group Account / Group Prospect Account</description>
        <label>Group Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about an employee of HCSC who does not have a Salesforce.com license</description>
        <label>Internal Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Producer_Contact</fullName>
        <active>true</active>
        <description>Contact record type that captures information about a person who works for a Producer Account</description>
        <label>Producer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Contact</fullName>
        <active>true</active>
        <description>This recordtype will be used by users to create Vendor Contacts associated to Vendor Accounts</description>
        <label>Vendor Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_Name_Cannot_Be_Modified</fullName>
        <active>false</active>
        <description>The Client Representatives and Super Users should not be able to modify the Contact Name. The data gets populated from the data repository and no changes should be allowed</description>
        <errorConditionFormula>AND( 
OR(
ISCHANGED( FirstName ), ISCHANGED( LastName ), ISCHANGED(  Salutation )  
),
NOT($Setup.Ignore_Validations__c.Ignore_Validation__c) 
)</errorConditionFormula>
        <errorMessage>You do not have permissions to modify the Contact Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_Validation</fullName>
        <active>false</active>
        <description>Fax number can only be a numeric and cannot be text</description>
        <errorConditionFormula>AND(NOT(OR(REGEX(Fax, &quot;\\D*?(\\d\\D*?){10}&quot;),ISNUMBER(Fax))),NOT($Setup.Ignore_Validations__c.Ignore_Validation__c),NOT(ISBlank(Fax)))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax can only be a number</errorMessage>
    </validationRules>
</CustomObject>